# geospatial-change-detection

./: .gitignore  HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: .dockerignore  Dockerfile  README.md
app/backend/: app.py  build_sentinel2.py  curated.py  gen_sample_pairs.py  inference.py  requirements.txt  sentinel2.py
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
app/frontend/src/components/: CompareView.tsx  ModelCard.tsx  Sentinel2View.tsx
configs/: ablation_fusion.yaml  compare_levircd.yaml  levircd_baseline.yaml  levircd_baseline_smoke.yaml  levircd_dinov2.yaml  levircd_dinov2_smoke.yaml  levircd_segformer.yaml  levircd_segformer_smoke.yaml  oscd_s2.yaml  oscd_s2_segformer.yaml  oscd_s2_segformer_smoke.yaml  oscd_s2_smoke.yaml
container/: changedet.def
docs/results/: levircd_comparison.md  levircd_fusion_ablation.md
experiments/: LOG.md
results/: .gitkeep
scripts/: smoke_load_levircd.py  smoke_load_oscd.py  stage_data.sh  stage_weights.sh
scripts/checksums/: .gitkeep  levircd.sha256  oscd.sha256
slurm/: smoke.sbatch  smoke_1gpu.sbatch  smoke_cpu.sbatch  train.sbatch  train_1gpu.sbatch
src/: __init__.py  compare.py  config.py  dist.py  eval_harness.py  evaluate.py  export.py  losses.py  metrics.py  train.py  utils.py
src/data/: __init__.py  levircd.py  oscd.py  tiling.py
src/models/: __init__.py  dinov2_cd.py  fc_siam_diff.py  siamese_segformer.py
tests/: __init__.py  test_config.py  test_data_factory.py  test_dinov2.py  test_eval_harness.py  test_export.py  test_losses.py  test_metrics.py  test_models.py  test_oscd.py  test_segformer.py  test_tiling.py  test_utils.py
