[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sat-change-detection"
version = "0.1.0"
description = "Satellite change-detection system (aerial + Sentinel-2) with a full eval harness and web demo."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
# Core deps kept minimal so `src` imports and CI stay light; heavy ML/geo deps
# live in the `train`/`serve` extras and are installed on Leonardo / the HF Space.
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.20",
    "mypy==2.1.0",
    "pytest>=8.0",
    "types-PyYAML>=6.0",
]
# Training stack. NOTE: torch/torchvision must be installed against Leonardo's CUDA
# (cuda/12.2 default -> cu121 wheels). The container (container/changedet.def) uses a
# pytorch cu121 base image; if installing into a venv, use:
#   pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
# Do NOT rely on the default PyPI torch build for GPU nodes (PRD §4 / leonardo.md).
train = [
    "torch>=2.2,<2.6",
    "torchvision>=0.17",
    "torchgeo>=0.6",
    "segmentation-models-pytorch>=0.3",
    "timm>=1.0",
    "transformers>=4.44",
    "peft>=0.12",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "albumentations>=1.4",
    "numpy>=1.26,<2.1",
    "tensorboard>=2.16",
    "safetensors>=0.4",
    "matplotlib>=3.8",
]
serve = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "onnxruntime>=1.18",
    "pystac-client>=0.8",
    "planetary-computer>=1.0",
    "rioxarray>=0.15",
    "numpy>=1.26,<2.1",
    "pillow>=10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "W"]

[tool.ruff.lint.per-file-ignores]
# tests use `pytest.importorskip(...)` before importing torch-dependent modules
"tests/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]  # deterministic import grouping across ruff versions

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
mypy_path = "."
files = ["src"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "yaml",
    "torch.*",
    "torchvision.*",
    "torchgeo.*",
    "timm.*",
    "transformers.*",
    "peft.*",
    "segmentation_models_pytorch.*",
    "rasterio.*",
    "rioxarray.*",
    "albumentations.*",
    "numpy.*",
    "onnxruntime.*",
    "pystac_client.*",
    "planetary_computer.*",
    "tensorboard.*",
    "safetensors.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
